# tip-python

./: .gitignore  CMakeLists.txt  LICENSE  Pipfile  README.md  build-linux.sh  build-mac.sh  install.sh  requirements.txt  setup.py
pysrc/: __init__.py  app.py  bundle.py  crypto.py  json.py  kyber.py  main.py  message.py  node.py  panic.py  protocol.py  server.py  share.py  store.py  structs.py  tip.py  tipconfig.py
src/: CMakeLists.txt  _tip.pyx  check_modification.py  go.mod  go.sum  main.go
src/tip/: badger.go  board.go  bundle.go  go.mod  go.sum  interface.go  lib.go  libtip.h  main.go  protocol.go  utils.go
tests/: config.json  example.toml  test.py  test.sh
